@@ -2,8 +2,9 @@
 Version: 1.0.1
 Date: ???
   Changes:
-    - Auto-zoom will now zooms higher than x1 if the screenshot would end up very small.
-    - The "Auto-zoom max screenshot size" setting is now "Auto-zoom *target* screenshot size". The purpose is identical but the idea is easier to understand. This is no longer an upper limit but a target, so you may need to adjust this setting upwards.
+    - The "Auto-zoom max screenshot size" setting is now "Auto-zoom *target* screenshot size".
+    - Auto-zoom will now use precise zoom values to always obtain a screenshot of the target size instead of being restricted to powers of 2. For example it can zoom to x3.2 instead of x2 or x4.
+    - Auto-zoom can now zoom higher than x1 if the screenshot would end up smaller than the target size.
     - Default JPG quality setting is now 90 (previously 80).
 
 ---------------------------------------------------------------------------------------------------
